# LicenseDetector

./: CMakeLists.txt  README.md
